force-app/main/default/objects/Vector_Search_Config__mdt/Vector_Search_Config__mdt.object-meta.xml
<CustomObject>
    <description>Runtime configuration for the vector search service implementation, controlling which Apex class handles Data Cloud queries.</description>
    <label>Vector Search Config</label>
    <pluralLabel>Vector Search Configs</pluralLabel>
</CustomObject>