force-app/main/default/objects/Vector_Search_Config__mdt/fields/Data_Space_Name__c.field-meta.xml
<CustomField>
    <fullName>Data_Space_Name__c</fullName>
    <description>Name of the Data Cloud data space to query. Leave blank to use the default data space.</description>
    <label>Data Space Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>