force-app/main/default/objects/Vector_Search_Config__mdt/fields/Implementation_Class__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Class__c</fullName>
    <description>Fully qualified Apex class name implementing IVectorSearchService.</description>
    <label>Implementation Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>