force-app/main/default/objects/Vector_Search_Config__mdt/fields/Max_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Results__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Maximum number of similar articles to return from vector search.</description>
    <label>Max Results</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>