force-app/main/default/objects/Vector_Search_Config__mdt/fields/Search_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>Search_Index_Name__c</fullName>
    <description>The Data Cloud vector search index name to query against.</description>
    <label>Search Index Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>