force-app/main/default/objects/Vector_Search_Config__mdt/fields/Similarity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Similarity_Threshold__c</fullName>
    <defaultValue>0.90</defaultValue>
    <description>Minimum similarity score (0.00-1.00) for articles to be considered a potential match.</description>
    <label>Similarity Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>